fix: spacing

--- a/assets/scss/components/_urgent-banner.scss
+++ b/assets/scss/components/_urgent-banner.scss
@@ -4,6 +4,7 @@
   border-color: govuk-colour("red");
   background-color: govuk-colour("red");
   color: govuk-colour("white");
+  margin-bottom: govuk-spacing(4);
 
   .govuk-notification-banner__heading {
     min-width: 100%;
